--- a/src/style.css
+++ b/src/style.css
@@ -9,3 +9,85 @@ body {
   padding: 45px;
   border-radius: 16px;
 }
+a {
+  color: #885df1;
+}
+
+.weather-app-city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+}
+
+.weather-app-details {
+  font-size: 16px;
+  color: rgba(39, 33, 66, 0.4);
+  line-height: 20px;
+}
+.weather-app-details strong {
+  color: #f65282;
+}
+
+header {
+  border-bottom: 1px solid #f9f7fe;
+  padding: 0 0 30px 0;
+}
+.search-form-input {
+  background: #f9f7fe;
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  padding: 15px 20px;
+  font-size: 16px;
+}
+.search-form-button {
+  background: #885df1;
+  border: none;
+  font-size: 16px;
+  font-weight: 700;
+  height: 50px;
+  padding: 15px 20px;
+  width: 110px;
+  border-radius: 6px;
+  color: white;
+  margin-left: 5px;
+}
+
+main {
+  padding: 30px 0;
+}
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
+.weather-app-container {
+  display: flex;
+}
+
+.weather-app-icon {
+  font-size: 44px;
+  display: flex;
+  margin-top: 20px;
+}
+
+.weather-app-temperature {
+  font-size: 80px;
+  font-weight: 700;
+  margin-left: 10px;
+}
+
+.weather-app-unit {
+  font-size: 28px;
+  font-weight: 400;
+  margin-left: -5px;
+  color: #212121;
+  margin-top: 10px;
+}
+
+footer {
+  border-top: 1px solid #f9f7fe;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.6);
+}
